--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 
   </div>
 
-
+   <audio id="greenAudio" src="assets/audio/green.mp3" type="audio/mpeg"></audio>
+   <audio id="redAudio" src="assets/audio/red.mp3" type="audio/mpeg"></audio>
+   <audio id="yellowAudio" src="assets/audio/yellow.mp3" type="audio/mpeg"></audio>
+   <audio id="blueAudio" src="assets/audio/blue.mp3" type="audio/mpeg"></audio>
 
 	<!-- MAIN javascript file -->
 	<script src="assets/js/main.js"></script> 
