--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
   <div class="container">
      
       <button id="start">Start</button>
+      <div> 
+         Count: <span id="count"></span>
+      </div>
 
   </div>
 
