Add strict button

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
          Count: <span id="count"></span>
       </div>
 
+      <button id="strict">Strict</button> <span id="strictDisplay">Off</span>
+
   </div>
 
    <audio id="greenAudio" src="assets/audio/green.mp3" type="audio/mpeg"></audio>
