--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
    <audio id="redAudio" src="assets/audio/red.mp3" type="audio/mpeg"></audio>
    <audio id="yellowAudio" src="assets/audio/yellow.mp3" type="audio/mpeg"></audio>
    <audio id="blueAudio" src="assets/audio/blue.mp3" type="audio/mpeg"></audio>
+   <audio id="errorAudio" src="assets/audio/error.mp3" type="audio/mpeg"></audio>
 
 	<!-- MAIN javascript file -->
 	<script src="assets/js/main.js"></script> 
