Add styling to count display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   	<title></title>
 
    <!-- FONTS -->
-  	
+  	 <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Nobile:400,700' rel='stylesheet' type='text/css'>
 
    <!-- STYLESHEETS -->
 
@@ -69,7 +70,8 @@
       </div>
 
       <div id="center">
-         
+         <div id="count1">00</div>
+         <div>COUNT</div>
       </div>
         
   </div>
