--- a/index.html
+++ b/index.html
@@ -70,20 +70,34 @@
       </div>
 
       <div id="center">
-         <div id="count1">00</div>
+         <div class="center-display" id="countDisplay"><span id="count">00</span></div>
          <div>COUNT</div>
+         <div id="strictLightDisplay"></div>
+         <div class="center-display" id="turnDisplay">COMP</div>
+         <div>TURN</div>
+
+
+         <div class="display-button" id="start">
+            <i class="fa fa-power-off" aria-hidden="true"></i>
+         </div>
+
+         <div id="strictContainer">
+            <div class="display-button" id="strict"></div>
+            <div id="strictHeading">STRICT</div>
+         </div>
       </div>
         
   </div>
 
   <div class="container">
      
-      <button id="start">Start</button>
+      <!-- <button id="start">Start</button> -->
       <div> 
-         Count: <span id="count"></span>
+         <!-- Count: <span id="count"></span> -->
       </div>
 
-      <button id="strict">Strict</button> <span id="strictDisplay">Off</span>
+      <!-- <button id="strict">Strict</button>  -->
+      <span id="strictDisplay">Off</span>
 
   </div>
 
