Fix display issues; game now displays 0 in front of numbers 1-9 and 'YOU' or 'COMP' for turn

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          <div class="center-display" id="countDisplay"><span id="count">00</span></div>
          <div>COUNT</div>
          <div id="strictLightDisplay"></div>
-         <div class="center-display" id="turnDisplay">COMP</div>
+         <div class="center-display" id="turnDisplay"></div>
          <div>TURN</div>
 
 
