Add winning sound and display

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
          <div class="center-display" id="countDisplay"><span id="count">00</span></div>
          <div>COUNT</div>
          <div id="strictLightDisplay"></div>
-         <div class="center-display" id="turnDisplay"></div>
+         <div class="center-display" id="turnDisplayContainer"><span id="turnDisplay"></span></div>
          <div>TURN</div>
 
 
          <div class="display-button" id="start">
-            <i class="fa fa-power-off" aria-hidden="true"></i>
+            <i class="fa fa-refresh" aria-hidden="true"></i>
          </div>
 
          <div id="strictContainer">
@@ -95,9 +95,6 @@
       <div> 
          <!-- Count: <span id="count"></span> -->
       </div>
-
-      <!-- <button id="strict">Strict</button>  -->
-      <span id="strictDisplay">Off</span>
 
   </div>
 
