Add header and footer

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 </head>
 
 <body>
+   
+   <div class="container">
+      <header>
+         <h1>SIMON</h1>
+      </header>
+   </div>
 
   <div class=" container game-container">
 
@@ -90,12 +96,9 @@
   </div>
 
   <div class="container">
-     
-      <!-- <button id="start">Start</button> -->
-      <div> 
-         <!-- Count: <span id="count"></span> -->
-      </div>
-
+      <footer>
+         Created By: Thomas Kolodziejczak
+      </footer>
   </div>
 
    <audio id="greenAudio" src="assets/audio/green.mp3" type="audio/mpeg"></audio>
